AC_PREREQ(2.59)
AC_INIT([uriparser], [0.6.0])
AM_INIT_AUTOMAKE([1.9 foreign])
AM_CONFIG_HEADER(test/CppTest/config.h)


AC_PROG_CC
AC_PROG_CXX
AC_PROG_LIBTOOL
AC_HEADER_STDC



# URI_SIZEDOWN
AC_ARG_ENABLE(sizedown, [
Extra options:
  --enable-sizedown       save space whereever possible (resulting in slower code)], [
	CPPFLAGS="${CPPFLAGS} -DURI_SIZEDOWN"
], [])



# These are for and from CppTest
AC_CHECK_HEADERS(sys/time.h)
AC_CHECK_FUNCS([gettimeofday])
AC_MSG_CHECKING(for round)
AC_TRY_COMPILE(
	[ #include <math.h> ],
	[ double d = round(1.0); ],
	[ round=yes ],[ round=no ])
AC_MSG_RESULT($round)
if test "$round" = "yes"; then
	AC_DEFINE([HAVE_ROUND],,[Defined if the function exists])
fi



# Local headers must come very first. Otherwise we
# risk including headers of an already installed
# uriparser version if its path is in CPPFLAGS
CPPFLAGS="-I${srcdir}/include ${CPPFLAGS}"



AC_CONFIG_FILES([Makefile])
AC_OUTPUT
